# LinuxTune

./: Makefile.am  README.txt  autogen.sh  configure.ac
src/: audioHandling.c  main.c
